--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3><strong>Каждую неделю в нашем кафе проходят разные акции!</strong></h3>
         <p title="Шоколад у нас закончился.">На этой недели заказав 5x Cappuccino вы получите шоколадку абсолютно
             бесплатно!</p><br>
-        <img src="../images/capu.png" alt="Cappuccino" width="600" height="426" title="Cappuccino">
+        <img src="/images/capu.png" alt="Cappuccino" width="600" height="426" title="Cappuccino">
         <br>
         <hr color="black">
     </main>
