--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </big>
         <h2>Меню вы можете найти меню нажав на картинку ниже:</h2>
         <a href="menu.html">
-            <img src="../images/menu.png" alt="logo" width="500" height="200">
+            <img src="images/menu.png" alt="logo" width="500" height="200">
         </a>
         <h2>АКЦИИ!</h2>
         <h3><strong>Каждую неделю в нашем кафе проходят разные акции!</strong></h3>
@@ -32,9 +32,9 @@
     </main>
     <footer>
         Так же мы есть в Соц-сетях! <br>
-        <a href="https://www.instagram.com/joebiden/" target="_blank"><img src="../images/nice.png" width="25"
+        <a href="https://www.instagram.com/joebiden/" target="_blank"><img src="images/nice.png" width="25"
                 height="25" title="Мы есть в Instagram"></a>
-        <a href="https://twitter.com/joebiden" target="_blank"><img src="../images/cool.png" width="25" height="25"
+        <a href="https://twitter.com/joebiden" target="_blank"><img src="images/cool.png" width="25" height="25"
                 title="Мы есть в Twitter"></a>
         <br>
         <big>
