--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
     </main>
     <footer>
         Так же мы есть в Соц-сетях! <br>
-        <a href="https://www.instagram.com/joebiden/" target="_blank"><img src="../images/nice.png" width="25"
+        <a href="https://www.instagram.com/joebiden/" target="_blank"><img src="images/nice.png" width="25"
                 height="25" title="Мы есть в Instagram"></a>
-        <a href="https://twitter.com/joebiden" target="_blank"><img src="../images/cool.png" width="25" height="25"
+        <a href="https://twitter.com/joebiden" target="_blank"><img src="images/cool.png" width="25" height="25"
                 title="Мы есть в Twitter"></a>
         <br>
         <big>
