--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <br>
         <!--Не знаю, что нужно сделать, чтобы эти точки были в центре вместе с текстом. В интернете ничего не нашёл. -->
         <p><strong>Готово!</strong></p>
-        <p><strong>И в течении двух-трёх недель вы по почте получите свою карту. </strong> <img src="../images/postman.png" width="30"
+        <p><strong>И в течении двух-трёх недель вы по почте получите свою карту. </strong> <img src="images/postman.png" width="30"
                 height="30" title="Почта"></p>
         <hr color="black">
         <h3>Вы можете нас найти здесь:</h3>
